@@ -1,1 +1,1 @@
-/home/fede/Escritorio/ManaOS/code/test/mips-dec-ultrix42/
+/home/ivo/ManaOS/ManaOS/test/mips-dec-ultrix42/
